# KubVC

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
src/: CMakeLists.txt  IconsFontAwesome6.h  alg_helpers.h  application_config.h  ast.cpp  ast.h  ast_builder.h  ast_inline.h  ast_nodes.h  ast_nodes_inline.h  container.h  double_buffer.h  expression.cpp  expression.h  expression_controller.h  expression_io.h  expression_model.h  expression_parser.cpp  expression_parser.h  expression_text_buffer.h  expression_visual_settings.h  function_handler.h  functions.h  graph_limits.cpp  graph_limits.h  gui.cpp  gui.h  io.h  lexer.h  logger.cpp  logger.h  macro_controller.h  main.cpp  math_base.h  nodeTypes.h  operators.h  primitives.h  renderer.cpp  renderer.h  singleton.h  (+5 more)
src/editor/: editor.cpp  editor.h  editor_fps_counter_window.cpp  editor_fps_counter_window.h  editor_graph_edit_window.cpp  editor_graph_edit_window.h  editor_graph_list_window.cpp  editor_graph_list_window.h  editor_keyboard_window.cpp  editor_keyboard_window.h  editor_macro_list_window.cpp  editor_macro_list_window.h  editor_math_element_list_window.cpp  editor_math_element_list_window.h  editor_menu_bar.cpp  editor_menu_bar.h  editor_plotter_window.cpp  editor_plotter_window.h
